--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -56,7 +55,7 @@
 <body>
   <div class="container" id="container">
     <h1 data-title="Soulager sa mémoire par l'entraînement">
-      Application au contexte professionnel
+      Développement de (x+a)(x + b), où a et b sont des entiers relatifs donnés
     </h1>
 
     <p class="intro">Testez vos connaissances avec le quiz interactif !</p>
